# microservices

./: Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
alembic/: env.py
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2e7c9bd5fb8d_delete_table_users.py  6c3f30e3e6d0_initial_tables.py
backend/src/: dependencies.py  main.py
backend/src/controllers/: __init__.py
backend/src/core/: config.py  security.py
backend/src/models/: __init__.py  article.py  comment.py
backend/src/repositories/: article.py  base.py  comment.py
backend/src/routes/: __init__.py  articles.py  comments.py
backend/src/schemas/: __init__.py  article.py  comment.py
backend/src/services/: __init__.py  task_queue.py
src/: dependencies.py  main.py
src/controllers/: __init__.py  article.py  comment.py  user.py
src/core/: config.py
src/models/: article.py  comment.py  user.py
src/repositories/: article.py
src/routes/: __init__.py  articles.py  comments.py  users.py
src/schemas/: __init__.py  article.py  comment.py  user.py
users_api/: Dockerfile  alembic.ini  pyproject.toml
users_api/alembic/versions/: 0cdb7d8913fa_create_table_users.py  7f2f3c0b2a1d_add_subscription_key_and_subscrib.py
users_api/src/: main.py
users_api/src/controllers/: user.py
users_api/src/core/: config.py  database.py
worker/: Dockerfile  alembic.ini  app.py  entrypoint.sh  pyproject.toml  requirements.txt
worker/alembic/: env.py  script.py.mako
worker/alembic/versions/: 202511201200_create_notifications_sent_table.py
worker/src/: main.py
worker/src/core/: config.py  database.py
worker/src/models/: __init__.py  article.py  notifications_sent.py  subscriber.py  user.py
worker/src/repositories/: article_repository.py  notification_repository.py  user_repository.py
(+9 files in other folders)
