[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic = ">=2.12.4,<3.0.0"
sqlalchemy = ">=2.0.44,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
aio-pika = "^9.5.8"
pydantic-settings = "^2.12.0"
tenacity = "^9.1.2"
alembic = "^1.13.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"